--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "description": "Serverless CRUD service exposing a REST HTTP interface",
   "author": "",
   "license": "MIT",
+    "scripts": {
+    "deploy": "sls deploy",
+    "update": "printf \"Which function do you want to update?\n\" && read functionName && printf \"\n\" && sls deploy -f $functionName"
+  },
   "dependencies": {
     "uuid": "^2.0.3"
   }
